--- a/index.html
+++ b/index.html
@@ -1,14 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Vyshnav Static Site</title>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vyshnav's DevOps Project</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f5f6fa;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 20px;
+    }
+    section {
+      margin: 40px;
+    }
+    footer {
+      background: #2c3e50;
+      color: white;
+      padding: 10px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; text-align:center; padding:40px;">
-  <h1>🚀 Maluuuu's Static Website</h1>
-  <p>Auto-deployed via <strong>GitHub Actions → AWS S3</strong></p>
-  <small>Deployed: <span id="time"></span></small>
-  <script>document.getElementById('time').innerText = new Date().toLocaleString();</script>
+<body>
+  <header>
+    <h1>🚀 Vyshnav's DevOps Project</h1>
+    <p>CI/CD with GitHub Actions + AWS S3 + Cloudflare</p>
+  </header>
+
+  <section>
+    <h2>About the Project</h2>
+    <p>This project demonstrates a fully automated CI/CD pipeline using GitHub Actions.</p>
+    <p>Every commit → GitHub → Deploys automatically to AWS S3 → Served globally with Cloudflare + HTTPS.</p>
+  </section>
+
+  <section>
+    <h2>Tech Stack</h2>
+    <ul style="list-style: none;">
+      <li>✅ AWS S3 (Hosting)</li>
+      <li>✅ Cloudflare (CDN + SSL)</li>
+      <li>✅ GitHub Actions (CI/CD)</li>
+      <li>✅ Git + HTML/CSS</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2025 Vyshnav Vijayan | DevOps Demo Project</p>
+  </footer>
 </body>
 </html>
-
